added endpoints & moved metadata to headers
