# internal/generated/zookeeperadmin/types.go
@@ -5,6 +5,7 @@ package zookeeperadmin
 
 import (
 	"encoding/json"
+	"time"
 
 	"github.com/oapi-codegen/runtime"
 	openapi_types "github.com/oapi-codegen/runtime/types"
@@ -95,10 +96,19 @@ type RefreshSessionResponseData struct {
 	Token        string `json:"token"`
 }
 
+// RequestDuration defines model for RequestDuration.
+type RequestDuration = int64
+
+// RequestID defines model for RequestID.
+type RequestID = string
+
 // ResponseStatus defines model for ResponseStatus.
 type ResponseStatus struct {
 	union json.RawMessage
 }
+
+// SemverVersion defines model for SemverVersion.
+type SemverVersion = string
 
 // SignInRequest defines model for SignInRequest.
 type SignInRequest struct {
@@ -115,6 +125,9 @@ type SignInResponseData struct {
 
 // SuccessResponseStatus defines model for SuccessResponseStatus.
 type SuccessResponseStatus string
+
+// Timestamp defines model for Timestamp.
+type Timestamp = time.Time
 
 // BadRequest defines model for BadRequest.
 type BadRequest = FailureResponseBody
