# internal/openapi/zookeeper-merged.yaml
@@ -7,9 +7,339 @@ servers:
 security:
   - bearerAuth: []
 tags:
+  - description: Endpoints for interacting with Orbes Socii functionality
+    name: OrbesSocii
   - description: Endpoints to support developers
     name: System
 paths:
+  /auth/sign-up:
+    post:
+      tags:
+        - Authorization
+      description: Register new zookeeper account.
+      summary: Sign In
+      operationId: signIn
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignUpRequest'
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/SignUpResponseData'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
+  /auth/sign-in:
+    post:
+      tags:
+        - Authorization
+      description: Sign in Zookeeper.
+      summary: Sign In
+      operationId: signIn1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInRequest'
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/SignInResponseData'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
+  /auth/sign-out:
+    delete:
+      tags:
+        - Authorization
+      description: Sign out Zookeeper account.
+      summary: Sign Out
+      operationId: signOut
+      responses:
+        '204':
+          description: Session deleted successfully.
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+      security:
+        - bearerAuth: []
+      parameters: []
+      requestBody: {}
+  /auth/refresh-session:
+    post:
+      tags:
+        - Authorization
+      description: Refresh zookeeper account session.
+      summary: Refresh Session
+      operationId: refreshSession
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshSessionRequest'
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/RefreshSessionResponseData'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
+  /auth/me:
+    get:
+      tags:
+        - Authorization
+      description: Returns authorized account information.
+      summary: Get Me
+      operationId: getMe
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/Comptus'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
+  /orbes_socii/request:
+    post:
+      tags:
+        - OrbesSocii
+      description: Request for creation of Orbis Socius instance.
+      summary: Request Orbis Socius
+      operationId: requestOrbisSocius
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestOrbisSociusRequest'
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/RequestOrbisSociusResponseData'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
+  /orbes_socii/activate:
+    post:
+      tags:
+        - OrbesSocii
+      description: Activation of Orbis Socius instance.
+      summary: Activation Orbis Socius
+      operationId: acrivateOrbisSocius
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ActivateOrbisSociusRequest'
+      responses:
+        '200':
+          description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestID
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/RequestDuration
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/Timestamp
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: ./shared-internal.yaml#/components/schemas/SemverVersion
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: >-
+                      ./shared-internal.yaml#/components/schemas/JSendResponseObject
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/ActivateOrbisSociusResponseData'
+        '401':
+          $ref: ./shared-internal.yaml#/components/responses/NotAuthorized
+        '403':
+          $ref: ./shared-internal.yaml#/components/responses/Forbidden
+        '500':
+          $ref: ./shared-internal.yaml#/components/responses/Error
+        default:
+          $ref: ./shared-internal.yaml#/components/responses/Failure
   /health:
     get:
       tags:
@@ -20,6 +350,23 @@ paths:
       responses:
         '200':
           description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: '#/components/schemas/RequestID'
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: '#/components/schemas/RequestDuration'
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: '#/components/schemas/Timestamp'
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: '#/components/schemas/SemverVersion'
           content:
             application/json:
               schema:
@@ -43,6 +390,23 @@ paths:
       responses:
         '200':
           description: Success
+          headers:
+            X-Request-Id:
+              description: identifier of current request.
+              schema:
+                $ref: '#/components/schemas/RequestID'
+            X-Request-Duration:
+              description: duration of request processing in milliseconds.
+              schema:
+                $ref: '#/components/schemas/RequestDuration'
+            X-Timestamp:
+              description: timestamp of sending response.
+              schema:
+                $ref: '#/components/schemas/Timestamp'
+            X-App-Version:
+              description: app version is semver application version.
+              schema:
+                $ref: '#/components/schemas/SemverVersion'
           content:
             application/json:
               schema:
@@ -110,6 +474,189 @@ paths:
                 $ref: '#/components/schemas/ErrorResponseBody'
 components:
   schemas:
+    Password:
+      type: string
+      format: password
+      minLength: 8
+      maxLength: 50
+      pattern: '^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$'
+    Country:
+      type: string
+      description: Country is ISO 3166-1 alpha-3 country code
+      enum:
+        - ukr
+        - usa
+        - gbr
+        - pol
+        - deu
+        - fra
+    Language:
+      type: string
+      description: 'Language is ISO 639-2:1998 alpha-3 language code'
+      enum:
+        - ukr
+        - eng
+    AuthTokenPair:
+      type: object
+      nullable: false
+      required:
+        - token
+        - refresh_token
+      properties:
+        token:
+          type: string
+        refresh_token:
+          type: string
+    Comptus:
+      type: object
+      nullable: false
+      required:
+        - email
+        - country
+        - language
+      properties:
+        email:
+          type: string
+          format: email
+        country:
+          $ref: '#/components/schemas/Country'
+        language:
+          $ref: '#/components/schemas/Language'
+    SignUpRequest:
+      type: object
+      nullable: false
+      required:
+        - email
+        - password
+        - country
+        - language
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          $ref: '#/components/schemas/Password'
+        country:
+          $ref: '#/components/schemas/Country'
+        language:
+          $ref: '#/components/schemas/Language'
+    SignUpResponseData:
+      type: object
+      nullable: false
+      required:
+        - self
+        - tokens
+        - session_id
+      properties:
+        self:
+          $ref: '#/components/schemas/Comptus'
+        tokens:
+          $ref: '#/components/schemas/AuthTokenPair'
+        session_id:
+          type: integer
+          format: int64
+    SignInRequest:
+      type: object
+      nullable: false
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          $ref: '#/components/schemas/Password'
+    SignInResponseData:
+      type: object
+      nullable: false
+      required:
+        - self
+        - tokens
+        - session_id
+      properties:
+        self:
+          $ref: '#/components/schemas/Comptus'
+        tokens:
+          $ref: '#/components/schemas/AuthTokenPair'
+        session_id:
+          type: integer
+          format: int64
+    RefreshSessionRequest:
+      type: object
+      nullable: false
+      required:
+        - refresh_token
+      properties:
+        refresh_token:
+          type: string
+    RefreshSessionResponseData:
+      type: object
+      nullable: false
+      required:
+        - self
+        - tokens
+        - session_id
+      properties:
+        self:
+          $ref: '#/components/schemas/Comptus'
+        tokens:
+          $ref: '#/components/schemas/AuthTokenPair'
+        session_id:
+          type: integer
+          format: int64
+    RequestOrbisSociusRequest:
+      type: object
+      required:
+        - region
+        - name
+        - description
+        - url
+      nullable: false
+      properties:
+        region:
+          type: string
+          minLength: 2
+          maxLength: 50
+        name:
+          type: string
+          minLength: 2
+          maxLength: 50
+        description:
+          type: string
+          minLength: 2
+          maxLength: 510
+        url:
+          type: string
+          format: uri
+    RequestOrbisSociusResponseData:
+      type: object
+      nullable: false
+      required:
+        - ok
+      properties:
+        ok:
+          type: boolean
+    ActivateOrbisSociusRequest:
+      type: object
+      nullable: false
+      required:
+        - code
+        - request_id
+      properties:
+        code:
+          type: string
+        request_id:
+          type: integer
+          format: int64
+    ActivateOrbisSociusResponseData:
+      type: object
+      nullable: false
+      required:
+        - api_key
+      properties:
+        api_key:
+          type: string
     ErrorResponseBody:
       type: object
       required:
@@ -208,6 +755,18 @@ components:
         deps:
           type: object
           nullable: true
+    RequestID:
+      type: string
+    RequestDuration:
+      type: integer
+      format: int64
+    Timestamp:
+      type: string
+      format: date-time
+    SemverVersion:
+      type: string
+      pattern: >-
+        ^v([0-9]|[1-9][0-9]*)\.([0-9]|[1-9][0-9]*)\.([0-9]|[1-9][0-9]*)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$
   securitySchemes:
     bearerAuth:
       $ref: ./shared-internal.yaml#/components/securitySchemes/bearerAuth
